--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 collections:
   notes:
     output: true
-    permalink: /notes/:year/:month/:day/:path/
+    permalink: /:layout/:year/:month/:day/:path/
   replies:
     output: true
     permalink: /replies/:year/:month/:day/:path/
