--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,6 @@ collections:
   replies:
     output: true
     permalink: /replies/:year/:month/:day/:path/
+links:
+    output: false
+    permalink: /links/:year/:month/:day/:title/
