--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ collections:
     output: true
     permalink: /replies/:year/:month/:day/:path/
   links:
-    output: true
+    output: false
     permalink: /links/:year/:month/:day/:path/
