--- a/_config.yml
+++ b/_config.yml
@@ -14,3 +14,6 @@ collections:
   watches:
     output: true
     permalink: /watches/:year/:month/:day/:path/
+  chats:
+    output: true
+    permalink: /chats/:year/:month/:day/:path/
